--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,8 +8,13 @@
     font-family: "Montserrat";
     src: url("fonts/Montserrat-Regular.ttf");
   }
+  @font-face{
+    font-family: "Montserrat Medium";
+    src: url("fonts/Montserrat-Medium.ttf");
+  }
 body{
     font-family: "Montserrat";
+    margin-bottom: 40px;
   }
 
 .App-header {
@@ -26,46 +31,144 @@ body{
   height: 40px;
 }
 
-.App-content {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  width: 80vw;
+.Name{
+  position: absolute;
+  bottom: 90px;
+  left: 20px;
 }
-
-.Project-text {
-  padding: 20px;
-  margin: 20px 0;
-  background: white;
-  border-radius: 2px;
-}
-
-.Project-text a {
-  color: #a15ffb;
-}
-
-.Project-text h1 {
-  font-size: 48px;
+.Name h2{
+  margin-bottom: 0px;
   font-family: "Montserrat Bold";
-  color: #DB3B60;
+  color: white;
 }
 
-.Project-text p {
-  font-size: 16px;
-}
-
-h1 {
+p {
   font-size: 24px;
 }
-
+.navigation .item{
+  margin-right: 20px;
+  color: #DB3B60;
+}
+.navigation .item:hover{
+  color: lightskyblue;
+}
+.navigation{
+  background-color: #FFF2F2;
+  padding: 40px;
+}
 .Examples-Container {
   display: flex;
 }
-.detailsbody{
+h1{
+  font-size: 4.5em;
+  font-family: "Montserrat Bold";
+  color: #DB3B60;
+  line-height:1em;
+  width: 70%;
+}
+.home p{
+  font-size: 2em;
+  width: 50%;
+}
+.enter{
+  font-size: 2em;
+}
+.home1{
+  display: flex;
+  flex-direction: row;
+  margin-top: 80px;
+  margin-left: 130px;
+}
+.home1 img{
+  height: 100%;
+  max-height: 150px;
+  width: 100%;
+  max-width: 150px;
+}
+.body{
+  margin-top: 40px;
   margin-left: 120px;
   margin-right: 120px;
+  margin-bottom: 120px;
 }
+/* TestCard Page */
+
+.bigcard{
+  width: 450px;
+  margin-right: 40px;
+  padding-bottom: 20px;
+  position: relative;
+  border-radius: 25px;
+  border-style:  dotted;
+  border-width: thick;
+  border-color: darkred;
+}
+
+.bigcard:hover{
+}
+.Description{
+  margin-top: 20px;
+  padding-left:10px;
+  padding-right:10px;
+  color: darkred;
+}
+.cardimage img{
+  width: 450px;
+  border-radius: 25px;
+  opacity: .7;
+  height: 280px;
+}
+.cardimage{
+  background:darkred;
+  border-radius: 25px;
+  height: 280px;
+}
+.bigcard {
+  width: 460px;
+}
+.row{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+/* Details Page */
 .detailsbody p{
   font-size: 16px;
   white-space: pre-line;
+}
+.detailsbody{
+  margin-top: 40px;
+  margin-left: 120px;
+  margin-right: 120px;
+}
+.col{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.details-image{
+  width: 475px;
+  height: auto;
+  margin-right: 40px;
+}
+.details-image img{
+  width: 475px;
+  height: auto;
+  margin-right: 40px;
+  margin-bottom: 40px;
+}
+.detailsbody h1{
+  font-size: 48px;
+  font-family: "Montserrat Medium";
+}
+.detailsbody h2{
+  font-size: 24px;
+  font-family: "Montserrat Medium";
+}
+.detailsbody{
+  font-size: 18px;
+}
+.small{
+  font-size: 16px;
+  font-style: italic;
 }
