--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,16 +11,28 @@
     font-family: "Montserrat Medium";
     src: url("fonts/Montserrat-Medium.ttf");
   }
+  @font-face{
+    font-family: "Montserrat ExtraBold";
+    src: url("fonts/Montserrat-ExtraBold.ttf");
+  }
 .right{
-  text-align: right;
+  float: right;
 }
 body{
     font-family: "Montserrat";
     margin-bottom: 40px;
   }
-  .leaflet-container {
+.leaflet-container {
     height: 400px;
     width: 100%;
+}
+.column h2, h3{
+  font-family: "Montserrat";
+  font-weight: normal;
+}
+
+.column h1{
+  margin-bottom:0px;
 }
 .App-header {
   background-color: white;
@@ -46,6 +58,7 @@ body{
   font-family: "Montserrat Bold";
   color: white;
   text-shadow: 2px 2px 4px #AD1349;
+  margin-top: 10px;
 }
 .Name h2 em{
   font-size: .8em;
@@ -57,6 +70,7 @@ p {
 .navigation .item{
   margin-right: 20px;
   color: #DB3B60;
+  text-decoration: none;
 }
 .navigation .item:hover{
   color: lightskyblue;
@@ -73,7 +87,34 @@ h1{
   font-family: "Montserrat Bold";
   color: #DB3B60;
   line-height:1em;
-  width: 70%;
+  width: 90%;
+}
+
+a{
+  text-decoration: none;
+  color: #DB3B60;
+}
+.home a:hover{
+  background-image: -webkit-linear-gradient(left, white 50%, #FFB6C1 50%);
+  background-image: linear-gradient(to right,white 50%, #FFB6C1 50%);
+  background-position: -100%;
+  background-size: 200%;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+button{
+   margin-left: 10px;
+    background-color: #FFB6C1; /* Green */
+    border: none;
+    color: white;
+    padding: 8px 18px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+button:hover{
+  color: #DB3B60;
 }
 .home p{
   font-size: 1.5em;
@@ -126,15 +167,15 @@ h1{
   color: darkred;
 }
 .cardimage img{
-  border-radius: 25px;
+  border-radius: 25px 25px 0px 0px;
   opacity: .7;
-  width: 420px;
+  width: 500px;
 }
 .cardimage{
   background:#DB3B60;
-  border-radius: 25px;
+  border-radius: 25px 25px 0px 0px;
   height: 250px;
-  width: 350px;
+  margin-bottom: 5px;
   overflow: hidden;
 }
 .bigcard {
@@ -160,10 +201,100 @@ h1{
 .row a{
   margin-right: 15px;
 }
+/* 2020 Page */
+h1.special{
+  font-family: "Montserrat ExtraBold";
+  font-weight: bolder;
+  font-size:72px;
+	letter-spacing:0.1em;
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 4px;
+  -webkit-text-stroke-color: pink;
+  color: white;
+  text-shadow: 
+						6px 6px #ff1f8f;
+}
+.column{
+  flex: 50%;
+}
+.flex{
+  display: flex;
+}
+.twentyviz h1{
+  font-family: "Montserrat";
+  font-size: 54px;
+}
+.links{
+  border: darkred;
+  text-align: center;
+}
+.links a{
+  border:#FFB6C1;
+  border-bottom-style: solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 70px;
+  padding-right: 70px;
+  margin:0px;
+  margin-top: 0px;
+}
+.links a:first-child{
+  border-right-style: solid;
+}
+.links a:hover{
+  background-color: #FFB6C1;
+}
+.tags {
+  margin: 0px;
+  margin-top: 10px;
+  display:inline-block;
+  padding: 0px;
+  overflow: auto;
+  white-space: nowrap;
+  width: 350px;
+}
+.tags ul{
+  list-style:none;
+  display: inline-block;
+  margin:0px;
+  padding:0px;
+}
+.tags li{
+  padding: 0px;
+  margin-top: 20px;
+  margin-left: 10px;
+  max-height: 50px;
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.tags a:hover{
+  background-color:#FFB6C1;
+}
+.tags a{
+  padding: 6px 14px;
+  overflow: wrap;
+  background-color: #ffe8e8;
+  border-radius: 26px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.scrolls{
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: 80px;
+white-space:nowrap
+}
 /* Details Page */
 .detailsbody p{
   font-size: 16px;
   white-space: pre-line;
+  line-height: 1.6;
+
 }
 .detailsbody{
   margin-top: 40px;
@@ -174,9 +305,6 @@ h1{
 .detailsbody h3{
   margin-top: 0px;
   margin-bottom: 0px;
-}
-.detailsbody h2{
-  margin-top: 20px;
 }
 .col{
   width: 100%;
@@ -200,10 +328,15 @@ h1{
 .detailsbody h1{
   font-size: 48px;
   font-family: "Montserrat Medium";
+  margin-bottom: 10px;
 }
 .detailsbody h2{
+  margin-top: 10px;
   font-size: 24px;
-  font-family: "Montserrat Medium";
+  font-family: "Montserrat";
+}
+.QnA h2{
+  margin-top: 40px;
 }
 .detailsbody{
   font-size: 18px;
