--- a/src/styles/Vis.css
+++ b/src/styles/Vis.css
@@ -25,7 +25,7 @@
     line-height: 5px;
 }
 .marker-cluster-custom {
-  background: #d76378;
+  background: #ff7d9b;
   border: 3px solid #ededed;
   border-radius: 50%;
   color: #ededed;
