--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -432,6 +432,35 @@ h3 a:hover{
     4px 4px #ff77b9,
     6px 6px #ff1f8f;
 }
+img.downarrow{
+  -webkit-text-stroke-color: #FFF2F2;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color:  #ff8ba6;
+  text-shadow: 
+  -2px -2px #ff77b9;
+  margin-left: 0px;
+  margin: 0 auto;
+  display: block;
+  width: 25px;
+  height: 25px;
+}
+img.downarrow{
+  -webkit-animation: mover 1s infinite  alternate;
+  animation: mover 1s infinite  alternate;
+}
+img.downarrow{
+  -webkit-animation: mover 1s infinite  alternate;
+  animation: mover 1s infinite  alternate;
+}
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+
 .intro2020 p{
   margin: 0px;
   color:#ff8ba6;
