--- a/src/styles/Vis.css
+++ b/src/styles/Vis.css
@@ -26,7 +26,7 @@
 }
 .marker-cluster-custom {
   background: #ff7d9b;
-  border: 3px solid #ededed;
+  border: 3px solid #ffefef;
   border-radius: 50%;
   color: #ededed;
   height: 20px;
