--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -148,6 +148,15 @@ button{
 button:hover{
   color: #FFB6C1;
 }
+a:hover{
+  color: #FFB6C1;
+}
+#box a:hover{
+  color: #FFB6C1;
+}
+.map a:hover{
+  color: #0078A8;
+}
 
 p a:hover{
     background-image: -webkit-linear-gradient(left, white 50%, rgb(255, 228, 233) 50%);
@@ -156,7 +165,7 @@ p a:hover{
     background-size: 200%;
     -webkit-transition: all 0.4s;
     transition: all 0.4s;
-
+    color: #DB3B60;
 }
 h2 a:hover{
   background-image: -webkit-linear-gradient(left, white 50%, rgb(255, 228, 233) 50%);
@@ -165,6 +174,7 @@ h2 a:hover{
   background-size: 200%;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+  color: #DB3B60;
 }
 h3 a:hover{
   background-image: -webkit-linear-gradient(left, white 50%, rgb(255, 228, 233) 50%);
@@ -173,6 +183,7 @@ h3 a:hover{
   background-size: 200%;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+  color: #DB3B60;
 }
 .enter{
   font-size: 2em;
