--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -751,8 +751,6 @@ h1.tenpx{
   margin-top: 20px;
 }
 
-
-
 @media (max-width: 900px) {
   .column{
     flex: 100%;
@@ -811,8 +809,24 @@ h1.tenpx{
 }
 
 @media(max-width: 426px){
+  .card2019 .bigcard{
+    width:90vw;
+  }
+  .gallery h1{
+    font-size: 50px;
+  }
+  .intro2020 h1{
+    text-align: left;
+    font-size: 50px;
+  }
+  .filterlist button{
+    text-align: left;
+  }
   .cover2020 h1{
     font-size: 3rem;
+  }
+  .twentyviz h1{
+    font-size: 40px;
   }
 }
 
